--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -24,7 +24,12 @@
 	<%- partial('post/pagination', {page: item}) %>
     </center>
 	</div>
-	
+
+	<div style="text-align：right">
+	    <%- partial('post/jiathis') %>
+	    <br/>
+	</div>
+
 	<!-- comment -->
 	<%- partial('post/comment', {page: item}) %>
 	
